add class to home section, rename article class

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <section>
+    <section class="home">
       <header>
         <nav>
           <ul>
@@ -20,7 +20,7 @@
         </nav>
       </header>
 
-      <article class="home">
+      <article class="home-container">
         <div>
           <h1>This website is awesome</h1>
           <p>
@@ -30,6 +30,7 @@
           </p>
           <button>Sign up</button>
         </div>
+        <img src="home-img.jpg" alt="cat" />
       </article>
     </section>
   </body>
