add home img and add flex to home-container

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <section class="home">
       <header>
         <nav>
-          <ul>
-            <li>HEADER LOGO</li>
+          <ul class="navbar">
+            <li class="logo">HEADER LOGO</li>
             <li>link 1</li>
             <li>link 2</li>
             <li>link 3</li>
@@ -30,6 +30,7 @@
           </p>
           <button>Sign up</button>
         </div>
+        <!-- <div class="img-container"></div> -->
         <img src="home-img.jpg" alt="cat" />
       </article>
     </section>
