make styles from start, tweak a bit the html

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       <header>
         <nav>
           <ul class="navbar">
-            <li class="logo">HEADER LOGO</li>
-            <li>link 1</li>
-            <li>link 2</li>
-            <li>link 3</li>
+            <li class="logo"><a>HEADER LOGO</a></li>
+            <li><a>link 1</a></li>
+            <li><a>link 2</a></li>
+            <li><a>link 3</a></li>
           </ul>
         </nav>
       </header>
 
       <article class="home-container">
-        <div>
+        <div class="sub-container">
           <h1>This website is awesome</h1>
           <p>
             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
@@ -30,8 +30,9 @@
           </p>
           <button>Sign up</button>
         </div>
-        <!-- <div class="img-container"></div> -->
-        <img src="home-img.jpg" alt="cat" />
+        <div class="img-container">
+          <!-- <img src="home-img.jpg" alt="cat" /> -->
+        </div>
       </article>
     </section>
   </body>
