create the html of 2nd section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- HOME SECTION -->
+
     <section class="home">
       <header>
         <nav>
@@ -34,6 +36,33 @@
           <!-- <img src="home-img.jpg" alt="cat" /> -->
         </div>
       </article>
+
+      <!-- 2nd SECTION -->
+
+      <section class="second-section">
+        <h2>Some random information</h2>
+        <div class="second">
+          <div class="card">
+            <div box-img box1></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+          </div>
+
+          <div>
+            <div box-img box2></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+          </div>
+
+          <div>
+            <div box-img box3></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+          </div>
+
+          <div>
+            <div box-img box4></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+          </div>
+        </div>
+      </section>
     </section>
   </body>
 </html>
