develop 2nd section, make cards, add flex etc

--- a/index.html
+++ b/index.html
@@ -38,31 +38,30 @@
       </article>
 
       <!-- 2nd SECTION -->
-
-      <section class="second-section">
-        <h2>Some random information</h2>
-        <div class="second">
-          <div class="card">
-            <div box-img box1></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-          </div>
-
-          <div>
-            <div box-img box2></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-          </div>
-
-          <div>
-            <div box-img box3></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-          </div>
-
-          <div>
-            <div box-img box4></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-          </div>
+    </section>
+    <section class="second-section">
+      <h2>Some random information</h2>
+      <div class="second">
+        <div class="card">
+          <div class="box-img box1"></div>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
         </div>
-      </section>
+
+        <div class="card">
+          <div class="box-img box2"></div>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="card">
+          <div class="box-img box3"></div>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="card">
+          <div class="box-img box4"></div>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
