finish section 2, develop testimonial

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
       <!-- 2nd SECTION -->
     </section>
+
+    <!-- SECOND SECTION -->
     <section class="second-section">
       <h2>Some random information</h2>
       <div class="second">
@@ -62,6 +64,18 @@
           <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
         </div>
       </div>
+    </section>
+
+    <!-- THIRD SECTION- TESTIMONIAL -->
+    <section class="testimonial">
+      <article class="testi-container">
+        <p class="testimonial-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque mi
+          eros, auctor et quam in, congue interdum nisl. Maecenas eget convallis
+          dui.
+        </p>
+        <span class="person">Kitso, the Don Juan</span>
+      </article>
     </section>
   </body>
 </html>
