--- a/index.html
+++ b/index.html
@@ -77,5 +77,17 @@
         <span class="person">Kitso, the Don Juan</span>
       </article>
     </section>
+
+    <section class="call-to">
+      <div class="call-container">
+        <div class="message">
+          <p>Call to action!It's time!</p>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <button>Sign up</button>
+      </div>
+    </section>
   </body>
 </html>
