develop footer section, add some letter spacing

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div class="sub-container">
           <h1>This website is awesome</h1>
           <p>
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
             fermentum, dui non feugiat aliquam, nulla ex tincidunt ante, eget
-            molestie leo ligula in magna."
+            molestie leo ligula in magna.
           </p>
           <button>Sign up</button>
         </div>
@@ -46,22 +46,22 @@
       <div class="second">
         <div class="card">
           <div class="box-img box1"></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+          <p>Lorem ipsum dolor sit amet consectetur.</p>
         </div>
 
         <div class="card">
           <div class="box-img box2"></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+          <p>Lorem ipsum dolor sit amet consectetur.</p>
         </div>
 
         <div class="card">
           <div class="box-img box3"></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+          <p>Lorem ipsum dolor sit amet consectetur.</p>
         </div>
 
         <div class="card">
           <div class="box-img box4"></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+          <p>Lorem ipsum dolor sit amet consectetur.</p>
         </div>
       </div>
     </section>
@@ -88,6 +88,12 @@
         </div>
         <button>Sign up</button>
       </div>
+    </section>
+
+    <!-- FOOTER SECTION -->
+
+    <section class="footer">
+      <p>Copyright &copy; The Odin Project 2023</p>
     </section>
   </body>
 </html>
