--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <header>
         <nav>
           <ul class="navbar">
-            <li class="logo"><a>HEADER LOGO</a></li>
-            <li><a>link 1</a></li>
-            <li><a>link 2</a></li>
-            <li><a>link 3</a></li>
+            <li class="logo"><a href="#">HEADER LOGO</a></li>
+            <li><a href="#">link 1</a></li>
+            <li><a href="#">link 2</a></li>
+            <li><a href="#">link 3</a></li>
           </ul>
         </nav>
       </header>
